added the last two weeks blog posts

--- a/docs/_posts/2021-02-15-week-one.markdown
+++ b/docs/_posts/2021-02-15-week-one.markdown
@@ -8,7 +8,7 @@ categories: process
 
 For this week I started working on expanding the ideas I had initially for this project. The 2D platformer would use keyboard controls, to be a closely aligned to flash games which I'm borrowing a lot of influence from. In additon, my current plan is to have 13 levels completed for the project. I think this number would be long enough to tell the story, while short enough to design out in a reasonable timeframe. As for the game platform, I'm still torn between two options. However, deciding the game engine platform shouldn't impact the first parts of this project which is low-fi designs/iterations of all the levels as well as iterating on the story and how the player interacts within the environment.
 
-I gave the protagonist a name: Remiro (there isn't any reasson why his name should be Remiro, it was a name I was saving to use for a game since I was 14 haha). Remiro's backstory at the moment is a young maan who wishes to acquire the Rod of Justice (this name is subject to change) to prove his worth as king. You the player follows Ramiro as he fights or evades the evil goblins on his way to obtaining the Rod. With the Rod, Ramiro is now king and the people rejoice. 
+I gave the protagonist a name: Remiro (there isn't any reasson why his name should be Remiro, it was a name I was saving to use for a game since I was 14 haha). Remiro's backstory at the moment is a young man who wishes to acquire the Rod of Justice (this name is subject to change) to prove his worth as king. You the player follows Ramiro as he fights or evades the evil goblins on his way to obtaining the Rod. With the Rod, Ramiro is now king and the people rejoice. 
 
 Twenty years has passed and Ramiro has become a rather unpopular ruler. His people are angered and Ramiro is confused as to why, meanwhile he too is becoming tired of being King. Looking for answers as to why he decided to do this work in the first place, Ramiro travels back to where he came from to remind himself of why he enjoyed obtaining the Rod as well as discover how the kingdom has progressed since he became king.
 
