fixed the links

--- a/docs/_posts/2021-02-15-week-one.markdown
+++ b/docs/_posts/2021-02-15-week-one.markdown
@@ -18,4 +18,4 @@ Interestingly enough, I found myself starting to reference *Megamind* this week 
 
 The timeskip I felt was important as it allows for me to switch up the controls for the game reasonably. Now that he's older, he wouldn't be able to clear the  kind of jumps young Remiro. But he also now has the Rod which should allow him to solve these puzzles with more creative measures. 
 
-My first draft of the project plan: https://docs.google.com/document/d/11T9dfJ1iqB5_P4XmgYFcbVaSS_JZTMEb-r5EydwwEtA/edit?usp=sharing
+My first draft of the project plan: <https://docs.google.com/document/d/11T9dfJ1iqB5_P4XmgYFcbVaSS_JZTMEb-r5EydwwEtA/edit?usp=sharing>
