--- a/docs/_posts/2021-04-12-week-nine.markdown
+++ b/docs/_posts/2021-04-12-week-nine.markdown
@@ -11,4 +11,4 @@ In addition after hearing comments about similarities of the story by other peop
 
 To prepare the game for the final demo, there's certain things that need to get done this week. I'm continuing to work on the low-fi designs for the two main characters and plan to have that done within the next few weeks. For this week, I'll need to prioritize working on smoothing the animations for the Unity scenes. In addition to that, I'll need to implement a way to communicate a time jump within the story. I've decided on a similar title card from _Avengers: Endgame_ where the screen fades to black and the text fades in to read "40 Years Later". I was unable to find a clip of the scene I'm referring to but I hope to have that done this week. An alternative idea I had was to have a timelapse within the Unity game, but I would not be able to accomplish this in the time left.
 
-This week, I would alos like to gain feedback back from the playtesters to see if the mechanics need to be tweaked or if anything didn't make any sense while playing. Would also like to test to see if a shooting mechanic for the player would be necessary.
+This week, I would also like to gain feedback back from the playtesters to see if the mechanics need to be tweaked or if anything didn't make any sense while playing. Would also like to test to see if a shooting mechanic for the player would be necessary.
